# src/models/roles.go
@@ -1,6 +1,7 @@
 package models
 
 type Role string
+type Permission string
 
 const (
 	ChangeUserInfo Role = "chgusrinfo"
@@ -13,4 +14,20 @@ func HasRole(roles []Role, role Role) bool {
 		}
 	}
 	return false
+}
+
+type RoleFile struct {
+	Permissions []Permission
+}
+
+func PermissionsToStrings(permissions []Permission) []string {
+	var result []string
+	for _, permission := range permissions {
+		result = append(result, string(permission))
+	}
+	return result
+}
+
+func (r *Role) GetName() string {
+	return string(*r)
 }
